fixed image to display on mobile properly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -292,34 +292,45 @@ footer {
     .block {
         max-width: 350px;
         min-width: 350px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    .block h2 {
+        flex: wrap;
+        max-height: 56px;
     }
 
     .block ul {
-        position: none;
-        display: block;
+        position: static;
+        display: inline-block;
+        max-width: 350px;
+        margin: 10px;
+        text-align: left;
     }
-
+    
     .block li {
-        font-size: 12;
-        position: none;
-        display: inline;
+        position: static;
+        display: inline-block;
+        max-width: 130px;
+        margin: 0px;
     }
-
+    
     .leaves {
-        width: 80px;
-        height: 50px;
+        display: none;
     }
 
     .website-img {
-        max-width: 250px;
-        margin: 4px;
-        position: center;
-        display: block;
+        max-width: 298px;
+        margin: 10px;
+        position: static;
+        align-items: center;
         border-radius: 10px;
         box-shadow: 4px 4px 8px var(--brown);
         transition: box-shadow 0.3s;
     }
-    
+       
     #container1 {
         float: none;
         max-width: 100%;
@@ -334,37 +345,45 @@ footer {
     #bigger-block {
         max-width: 350px;
         min-width: 350px;
-        min-height: 250px;
-        max-height: 300px;
+        max-height: 350px;
+        min-height: 350px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
         padding: 0 8px 0 8px;
     }
     
     #bigger-block h2 {
-        font-size: 20px;
+        flex: wrap;
         padding: 16px;
+        font-size: 20px;
+        max-height: 56px;
     }
     
     #bigger-block ul {
-        position: none;
-        display: block;
-        right: 0px;
-        bottom: 8px;
-        max-width: 160px;
+        position: static;
+        display: inline-block;
+        max-width: 350px;
         margin: 10px;
+        text-align: left;
+        padding: 8px 4px 8px 0;
+        font-size: 16px;
     }
     
     #bigger-block li {
         padding: 8px 4px 8px 0;
         font-size: 16px;
-        position: none;
-        display: inline;
+        position: static;
+        display: inline-block;
+        max-width: 130px;
+        margin: 0px;
     }
     
     #bigger-website {
-        max-width: 200px;
-        margin: 4px;
-        position: none;
-        display: block;
+        max-width: 298px;
+        margin: 10px;
+        position: static;
+        align-items: center;
         border-radius: 10px;
         box-shadow: 4px 4px 8px var(--brown);
         transition: box-shadow 0.3s;
@@ -375,12 +394,7 @@ footer {
     }
     
     #big-leaves {
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 80px;
-        height: 50px;
-        z-index: 0;
+        display: none;
     }   
     
     #email-form {
